# mnpCDX

./: .gitignore  Makefile  README.md  agents_team_blueprint.md  mnpCDX_detailed_spec.md  mnpCDX_development_plan_critical_review.md  mnpCDX_nextgen_project.md  mnpCDX_project_concept.md  mnpCDX_spec_and_delivery_plan.md  project_overview.md  pyproject.toml
config/: operator_mapping.yml
docs/: agent_backlog.yaml  agent_team_manifest.yaml  portfolio_team_distribution_plan.md  release_notes.md  team_session_2026-02-17_mnpCDX.md  token_minimal_operating_model.md
scripts/: release_milestones.sh
src/mnp_cdx/: __init__.py  cli.py  config.py  dashboard.py  reporting.py
src/mnp_cdx/analytics/: ai_service.py  kpi.py
src/mnp_cdx/api/: app.py  schemas.py
src/mnp_cdx/api/static/: app.js  index.html  styles.css
src/mnp_cdx/db/: repository.py
src/mnp_cdx/generic/: __init__.py  template_engine.py
src/mnp_cdx/ingest/: operator_mapping.py  parser.py  service.py
src/mnp_cdx/orchestration/: main_architect.py
src/mnp_cdx/security/: secrets.py
tests/: test_analytics_quality.py  test_api_error_handling.py  test_generic_template_engine.py  test_main_architect_orchestration.py  test_operator_mapping.py  test_parser_utils.py
